# gst-plugins-math

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  README  configure.ac
gst/: Makefile.am
gst/unary/: Makefile.am  unary.c  unary_abs.c  unary_base.c  unary_base.h  unary_complex_base.c  unary_complex_base.h  unary_complex_pow.c  unary_exp.c  unary_ln.c  unary_log.c  unary_log10.c  unary_pow.c
